--- a/NLP_begins.ipynb
+++ b/NLP_begins.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,27 +39,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello lemma --- hello\n",
+      "hello lemma ---> hello\n",
       "pos of word is :  INTJ\n",
-      "I lemma --- -PRON-\n",
+      "<class 'str'>\n",
+      "I lemma ---> -PRON-\n",
       "pos of word is :  PRON\n",
-      "am lemma --- be\n",
+      "<class 'str'>\n",
+      "am lemma ---> be\n",
       "pos of word is :  VERB\n",
-      "feeling lemma --- feel\n",
+      "<class 'str'>\n",
+      "feeling lemma ---> feel\n",
       "pos of word is :  VERB\n",
-      "good lemma --- good\n",
+      "<class 'str'>\n",
+      "good lemma ---> good\n",
       "pos of word is :  ADJ\n",
-      "thank lemma --- thank\n",
+      "<class 'str'>\n",
+      "thank lemma ---> thank\n",
       "pos of word is :  VERB\n",
-      "you lemma --- -PRON-\n",
-      "pos of word is :  PRON\n"
+      "<class 'str'>\n",
+      "you lemma ---> -PRON-\n",
+      "pos of word is :  PRON\n",
+      "<class 'str'>\n"
      ]
     }
    ],
@@ -67,7 +74,8 @@
     "for i in p_data:\n",
     "  print(i,\"lemma --->\", i.lemma_)\n",
     "  time.sleep(2)\n",
-    "  print(\"pos of word is : \" , i.pos_)"
+    "  print(\"pos of word is : \" , i.pos_)\n",
+    "  print(type(i.pos_))"
    ]
   },
   {
